# crypto-trader-bot

./: .env.example  .gitignore  .gopls  CMakeLists.txt  Dockerfile  Makefile  README.md  README.pt-BR.md  backup.sh  db_schema.sql  docker-compose.yml  go.mod  go.sum  main.cpp  main.go  package-lock.json  package.json  progress.json  readme.md  requirements.txt  trader.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/auto/: devcontainer.json
.devcontainer/old/: devcontainer.json
_docs/en/: USAGE.md
database/: create_database.sql  database copy.db  database.db  db_schema.sql
dataset/: generate.cpp
dataset-generator/: .env.example  go.mod  main.go
docs/: USAGE.md  USAGE.pt-BR.md
docs/pt-BR/: README.md
model/: .gitignore  database.py  requirements.txt
model-generator/: generate_models_lstm_v1.py  generate_models_lstm_v2.py  generate_models_lstm_v3.py  generate_models_rf_v1.py  generate_models_rf_v2.py  generate_models_rf_v3.py  generate_models_tf_v3.py  generate_models_tf_v4.py  generate_models_tf_v5.py  requirements.txt
python-project/: download_binance_crypto_data.py  generate_models_tf.py  generate_models_tf_v1.py  generate_models_tf_v2.py  generate_models_tf_v3.py  generate_models_tf_v4.py  predict_tf.py  update_models_tf_v3.py
scripts/: download_binance_crypto_data.go  download_binance_crypto_data.py  get_binance_currentDayCryptosHistory.go  get_fear_alternative.me.go  get_fear_coinmarketcap.go  migrate_db.py  migrate_fear_index_toSqlite.go
scripts-sh/: setup-git-config.sh
src/: Application.hpp
(+130 files in other folders)
